# rAdmin

./: .gitignore  Cargo.toml  testing.env
.cargo/: config.toml
examples/minimal/: Cargo.toml
examples/minimal/seeds/: roles.json
examples/minimal/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
migrations/00 diesel initial setup/: up.sql
migrations/01 access control/: down.sql  up.sql
migrations/02 global search/: down.sql  up.sql
src/: application.rs  config.rs  database.rs  error.rs  errors.rs  lib.rs  permissions.rs  response.rs  roles.rs  template_helpers.rs
src/acl/: auth.rs  config.rs  db.rs  mod.rs  schema.rs  seeder.rs
src/acl/cli/: accounts.rs  mod.rs  permissions.rs  roles.rs  tables.rs
src/acl/factories/: account.rs  mod.rs  permission.rs  role.rs
src/acl/forms/: account.rs  mod.rs  permission.rs  role.rs
src/acl/guards/: auth.rs  has_permission.rs  has_role.rs  mod.rs  potential_account.rs  unauthenticated.rs
src/acl/models/: account.rs  mod.rs  permission.rs  role.rs
src/acl/requests/: accounts.rs  mod.rs  permission.rs  role.rs
src/acl/routes/: avatar.rs  mod.rs
src/acl/routes/accounts/: create.rs  delete.rs  edit.rs  mod.rs  store.rs  table.rs
src/acl/routes/auth/: login.rs  logout.rs  mod.rs  register.rs
src/acl/routes/permissions/: create.rs  delete.rs  edit.rs  mod.rs  select.rs  table.rs
src/acl/routes/roles/: create.rs  delete.rs  edit.rs  mod.rs  select.rs  store.rs  table.rs  update.rs
src/acl/traits/: mod.rs  permissions.rs  roles.rs
src/cli/: app.rs  db.rs  mod.rs  storage.rs  table.rs
src/client/: api.rs  db.rs  mod.rs
src/controllers/: global_search.rs  mod.rs
src/crud/: delete.rs  mod.rs  store.rs
src/modules/: cli.rs  db.rs  mod.rs  modules.rs  routes.rs  seeder.rs  server.rs
src/routes/: search.rs
src/select/: mod.rs  result.rs
src/table/: mod.rs  response.rs
src/traits/: fillable.rs  mod.rs  paginate.rs  submitable.rs  validatable.rs
src/types/: json_column.rs  mod.rs  pass_type.rs
tests/: test.rs
tests/acl/models/: account.rs  mod.rs  permission.rs  role.rs
tests/acl/routes/: mod.rs
tests/acl/routes/accounts/: create.rs  delete.rs  mod.rs  table.rs
tests/acl/routes/auth/: login.rs  logout.rs  register.rs
tests/acl/routes/permissions/: create.rs  delete.rs  table.rs
(+3 files in other folders)
