[package]
name = "radmin"
version = "0.1.0"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"

[workspace]
members = [
    "macros",
    "examples/minimal"
]

[features]
default = []
tera = []
handlebars = []

[dependencies]
uuid = { version = "^0.8", features = ["serde", "v4"] }
rand = "0.7.3"
termion = "*"
serde = "^1.0"
clap = "^2.33"
rocket = "^0.4"
bcrypt = "0.8.2"
dotenv = "^0.15"
serde_json = "^1"
paginator = "0.2.0"
validator = "^0.11"
rust-argon2 = "0.8.2"
typed-builder = "^0.7"
derive_more = "^0.99"
diesel_migrations = "^1.4"
validator_derive = "^0.11"
radmin-macros = { path = "macros" }
chrono = { version = "0.4.15", features = ["serde"] }
fake = { version = "2.2.3", features = ["derive", "chrono"] }
cli-table = { git = "https://github.com/devashishdxt/cli-table" }
diesel = { version = "^1.4", features = ["postgres", "uuidv07", "chrono"] }
rocket_contrib = { version = "^0.4", features = ["uuid", "json", "diesel_postgres_pool"] }

[target.'cfg(feature = "tera")'.dependencies.rocket_contrib]
features = ["uuid", "json", "diesel_postgres_pool", "tera_templates"]

[target.'cfg(feature = "handlebars")'.dependencies.rocket_contrib]
features = ["uuid", "json", "diesel_postgres_pool", "handlebars_templates"]
